# AeroDemonstrator

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  vsppytools-full.yml
.github/workflows/: docs.yml
docs/: conf.py  index.rst  installation.rst  make.bat  notebooks.rst
docs/api/: index.rst  naca_airfoil.rst  openvsp_utils.rst  vlm.rst
notebooks/01_airfoil/: airfoil_geometry_aerodynamics.ipynb
notebooks/02_finite_wing/: 00_finite_wing.adb  00_finite_wing.group.0  00_finite_wing.group.1  00_finite_wing.history  00_finite_wing.lod  00_finite_wing.polar  00_finite_wing.slc  00_finite_wing.vkey  00_finite_wing.vsp3  00_finite_wing.vspaero  00_finite_wing_analysis_results.csv  00_finite_wing_vsp.ipynb  01_finite_wing_vsp_oop.ipynb  finite_wing_vlm.ipynb  index.rst
notebooks/02_finite_wing/00_finite_fing_vsp/: 00_finite_wing.adb  00_finite_wing.adb.cases  00_finite_wing.group.0  00_finite_wing.group.1  00_finite_wing.history  00_finite_wing.polar  00_finite_wing.slc  00_finite_wing.vkey  00_finite_wing.vsp3  00_finite_wing.vspaero  00_finite_wing.vspgeom  00_finite_wing_analysis_results.csv
notebooks/02_finite_wing/01_finite_wing_vsp_oop/: 01_finite_wing_oop.adb  (+12 more)
notebooks/03_wing_fuselage/: wing_fuselage_openvsp.ipynb
notebooks/04_complete_aircraft/: full_aircraft_openvsp.ipynb
src/aerodemo/: AirfoilSpec.py  FiniteWing.py  WingSegment.py  __init__.py  _vsppytools_bootstrap.py  naca_airfoil.py  openvsp_utils.py  test_FiniteWing.vsp3  vlm.py
tests/: test_finite_wing.py  test_naca_airfoil.py  test_openvsp_utils.py  test_vlm.py
(+15 files in other folders)
